src/deploy/lists-web/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lists
  labels:
    istio-injection: enabled
