src/deploy/lists-web/deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name:  lists-web
  namespace: lists
  labels:
    name:  lists-web
spec:
  replicas: 2
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  lists-web
        version: "0.1"
    spec:
      imagePullSecrets:
        - name: docati-cr
      containers:
      - image:  docati.azurecr.io/list:latest
        imagePullPolicy: Always # Always=default for images with lastest-tag
        name: lists-web
        args: ["--urls=http://*:80"]
        resources:
          requests:
            cpu: "20m"
            memory: "55M"
        livenessProbe:
          httpGet:
            path: /api/health/live
            port: 80
          initialDelaySeconds: 10
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /api/health/ready
            port: 80
          initialDelaySeconds: 30
          timeoutSeconds: 10
        ports:
        - containerPort:  80
          name:  http-main
      restartPolicy: Always
